--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
